OpenAstro2 Make transit

--- a/openastro2/settings/settings2.json
+++ b/openastro2/settings/settings2.json
@@ -3,13 +3,14 @@
 "color_codes": {
   "paper_0": "#000000", "paper_1": "#ffffff",
   "zodiac_bg_0": "#ef5350", "zodiac_bg_1": "#73b230", "zodiac_bg_2": "#ffd237", "zodiac_bg_3": "#4093f4", "zodiac_bg_4": "#ef5350", "zodiac_bg_5": "#73b230", "zodiac_bg_6": "#ffd237", "zodiac_bg_7": "#4093f4", "zodiac_bg_8": "#ef5350", "zodiac_bg_9": "#73b230", "zodiac_bg_10": "#ffd237", "zodiac_bg_11": "#4093f4", "zodiac_icon_0": "#333333", "zodiac_icon_1": "#333333", "zodiac_icon_2": "#333333", "zodiac_icon_3": "#333333", "zodiac_icon_4": "#333333", "zodiac_icon_5": "#333333", "zodiac_icon_6": "#333333", "zodiac_icon_7": "#333333", "zodiac_icon_8": "#333333", "zodiac_icon_9": "#333333", "zodiac_icon_10": "#333333", "zodiac_icon_11": "#333333",
-  "zodiac_radix_ring_0": "#666666", "zodiac_radix_ring_1": "#666666", "zodiac_radix_ring_2": "#666666",
-  "zodiac_transit_ring_0": "#666666", "zodiac_transit_ring_1": "#666666", "zodiac_transit_ring_2": "#666666", "zodiac_transit_ring_3": "#0000ff",
+  "zodiac_radix_ring_0": "#CCCCCC", "zodiac_radix_ring_1": "#CCCCCC", "zodiac_radix_ring_2": "#CCCCCC",
+  "zodiac_transit_ring_0": "#CCCCCC", "zodiac_transit_ring_1": "#CCCCCC", "zodiac_transit_ring_2": "#CCCCCC",
   "houses_radix_line": "#444444", "houses_transit_line_1": "#ff0000", "houses_transit_line_2": "#0000ff",
   "aspect_0": "#4093f4", "aspect_30": "#770000", "aspect_45": "#888888", "aspect_60": "#ef5350", "aspect_72": "#770000",
   "aspect_90": "#444444", "aspect_120": "#ef5350", "aspect_135": "#888888", "aspect_144": "#770000",
   "aspect_150": "#fff600", "aspect_180": "#444444",
-  "planet_all": "#444444", "planet_point": "#ff0000", "planet_point_t": "#0000FF", "color_transit_1": "#ff0000", "color_transit_2": "#0000FF",
+  "planet_all": "#444444",
+  "color_radix": "#444444", "color_transit_1": "#ff0000", "color_transit_2": "#0000FF",
   "planet_0": "#444444", "planet_1": "#444444", "planet_2": "#444444", "planet_3": "#444444", "planet_4": "#444444", "planet_5": "#444444", "planet_6": "#444444", "planet_7": "#444444", "planet_8": "#444444", "planet_9": "#444444", "planet_10": "#444444", "planet_11": "#444444", "planet_12": "#444444", "planet_13": "#444444", "planet_14": "#444444", "planet_15": "#444444", "planet_16": "#000000", "planet_17": "#000000", "planet_18": "#000000", "planet_19": "#000000", "planet_20": "#000000", "planet_21": "#000000", "planet_22": "#444444", "planet_23": "#444444", "planet_24": "#444444", "planet_25": "#444444", "planet_26": "#444444", "planet_27": "#444444", "planet_28": "#000000", "planet_29": "#000000", "planet_30": "#000000", "planet_31": "#000000", "planet_32": "#000000", "planet_33": "#000000", "planet_34": "#000000",
   "lunar_phase_0": "#000000", "lunar_phase_1": "#FFFFFF", "lunar_phase_2": "#CCCCCC"},
 "label": {"cusp": "Cusp", "longitude": "Longitude", "latitude": "Latitude", "north": "North", "east": "East", "south": "South", "west": "West", "apparent_geocentric": "Apparent Geocentric", "true_geocentric": "True Geocentric", "topocentric": "Topocentric", "heliocentric": "Heliocentric", "fire": "Fire", "earth": "Earth (element)", "air": "Air", "water": "Water", "radix": "Radix", "transit": "Transit", "synastry": "Synastry", "composite": "Composite", "combine": "Combine", "solar": "Solar", "secondary_progressions": "Secondary Progressions"},
