OpenAstro2 Minor aspects

--- a/openastro2/settings/settings2.json
+++ b/openastro2/settings/settings2.json
@@ -6,26 +6,50 @@
   "zodiac_radix_ring_0": "#CCCCCC", "zodiac_radix_ring_1": "#CCCCCC", "zodiac_radix_ring_2": "#CCCCCC",
   "zodiac_transit_ring_0": "#CCCCCC", "zodiac_transit_ring_1": "#CCCCCC", "zodiac_transit_ring_2": "#CCCCCC",
   "houses_radix_line": "#444444", "houses_transit_line_1": "#ff0000", "houses_transit_line_2": "#0000ff",
-  "aspect_0": "#4093f4", "aspect_30": "#770000", "aspect_45": "#888888", "aspect_60": "#ef5350", "aspect_72": "#770000",
-  "aspect_90": "#444444", "aspect_120": "#ef5350", "aspect_135": "#888888", "aspect_144": "#770000",
-  "aspect_150": "#fff600", "aspect_180": "#444444",
+  "aspect_0": "#4093f4",
+  "aspect_18": "#888888",
+  "aspect_20": "#888888",
+  "aspect_30": "#770000",
+  "aspect_36": "#888888",
+  "aspect_40": "#888888",
+  "aspect_45": "#888888",
+  "aspect_51.5": "#888888",
+  "aspect_60": "#ef5350",
+  "aspect_72": "#770000",
+  "aspect_80": "#888888",
+  "aspect_90": "#444444",
+  "aspect_100": "#888888",
+  "aspect_108": "#888888",
+  "aspect_120": "#ef5350",
+  "aspect_135": "#888888",
+  "aspect_144": "#770000",
+  "aspect_150": "#fff600",
+  "aspect_180": "#444444",
   "planet_all": "#444444",
   "color_radix": "#444444", "color_transit_1": "#ff0000", "color_transit_2": "#0000FF",
   "planet_0": "#444444", "planet_1": "#444444", "planet_2": "#444444", "planet_3": "#444444", "planet_4": "#444444", "planet_5": "#444444", "planet_6": "#444444", "planet_7": "#444444", "planet_8": "#444444", "planet_9": "#444444", "planet_10": "#444444", "planet_11": "#444444", "planet_12": "#444444", "planet_13": "#444444", "planet_14": "#444444", "planet_15": "#444444", "planet_16": "#000000", "planet_17": "#000000", "planet_18": "#000000", "planet_19": "#000000", "planet_20": "#000000", "planet_21": "#000000", "planet_22": "#444444", "planet_23": "#444444", "planet_24": "#444444", "planet_25": "#444444", "planet_26": "#444444", "planet_27": "#444444", "planet_28": "#000000", "planet_29": "#000000", "planet_30": "#000000", "planet_31": "#000000", "planet_32": "#000000", "planet_33": "#000000", "planet_34": "#000000",
   "lunar_phase_0": "#000000", "lunar_phase_1": "#FFFFFF", "lunar_phase_2": "#CCCCCC"},
-"label": {"cusp": "Cusp", "longitude": "Longitude", "latitude": "Latitude", "north": "North", "east": "East", "south": "South", "west": "West", "apparent_geocentric": "Apparent Geocentric", "true_geocentric": "True Geocentric", "topocentric": "Topocentric", "heliocentric": "Heliocentric", "fire": "Fire", "earth": "Earth (element)", "air": "Air", "water": "Water", "radix": "Radix", "transit": "Transit", "synastry": "Synastry", "composite": "Composite", "combine": "Combine", "solar": "Solar", "secondary_progressions": "Secondary Progressions"},
+"label": {"cusp": "Cusp", "longitude": "Lon", "latitude": "Lat", "north": "N", "east": "E", "south": "S", "west": "W", "apparent_geocentric": "Apparent Geocentric", "true_geocentric": "True Geocentric", "topocentric": "Topocentric", "heliocentric": "Heliocentric", "fire": "Fire", "earth": "Earth", "air": "Air", "water": "Water", "radix": "Radix", "transit": "Transit", "synastry": "Synastry", "composite": "Composite", "combine": "Combine", "solar": "Solar", "secondary_progressions": "Secondary Progressions"},
 "settings_aspect": [
-  {"degree": 0, "name": "conjunction", "color": "#5757e2", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "10"},
-  {"degree": 30, "name": "semi-sextile", "color": "#810757", "visible": 0, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "3"},
-  {"degree": 45, "name": "semi-square", "color": "#b14e58", "visible": 0, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "3"},
-  {"degree": 60, "name": "sextile", "color": "#d59e28", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "5"},
-  {"degree": 72, "name": "quintile", "color": "#1f99b3", "visible": 0, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "2"},
-  {"degree": 90, "name": "square", "color": "#dc0000", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "5"},
-  {"degree": 120, "name": "trine", "color": "#36d100", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "6"},
-  {"degree": 135, "name": "sesquiquadrate", "color": "#985a10", "visible": 0, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "3"},
-  {"degree": 144, "name": "biquintile", "color": "#7a9810", "visible": 0, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "2"},
-  {"degree": 150, "name": "quincunx", "color": "#fff600", "visible": 0, "visible_grid": 0, "is_major": 0, "is_minor": 0, "orb": "3"},
-  {"degree": 180, "name": "opposition", "color": "#510060", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "6"}
+  {"degree": 0, "name": "conjunction 0", "color": "#5757e2", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "10"},
+  {"degree": 18, "name": "vigintil 1/20", "color": "#810757", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 20, "name": "semi-nanogon 1/18", "color": "#810757", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 30, "name": "semi-sextile 1/12", "color": "#810757", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "3"},
+  {"degree": 36, "name": "decil 1/10", "color": "#810757", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 40, "name": "nanogon 1/9", "color": "#b14e58", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 45, "name": "semi-square 1/8", "color": "#b14e58", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "3"},
+  {"degree": 51.5, "name": "septil 1/7", "color": "#b14e58", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 60, "name": "sextile 1/6", "color": "#d59e28", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "5"},
+  {"degree": 72, "name": "quintile 1/5", "color": "#1f99b3", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "2"},
+  {"degree": 80, "name": "binanogon 2/9", "color": "#1f99b3", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 90, "name": "square 1/4", "color": "#dc0000", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "5"},
+  {"degree": 100, "name": "sentagon 5/18", "color": "#b14e58", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 108, "name": "tridecil 3/10", "color": "#b14e58", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 120, "name": "trine 1/3", "color": "#36d100", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "6"},
+  {"degree": 135, "name": "sesquiquadrate 3/8", "color": "#985a10", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "3"},
+  {"degree": 144, "name": "biquintile 2/5", "color": "#7a9810", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "2"},
+  {"degree": 150, "name": "quincunx 5/12", "color": "#fff600", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 0, "orb": "3"},
+  {"degree": 180, "name": "opposition 1/2", "color": "#510060", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "6"}
 ],
 "settings_planet": [
   {"id": 0, "name": "sun", "color": "#444444", "visible": 1, "element_points": 40, "zodiac_relation": "4", "label": "\u0421\u043e\u043b\u043d\u0446\u0435", "label_short": "sun", "visible_aspect_line": 1, "visible_aspect_grid": 1},
@@ -72,5 +96,5 @@
   {"id": 41, "name": "persephone", "color": "#444444", "visible": 0, "element_points": 0, "zodiac_relation": "-1", "label": "South Node", "label_short": "SNode", "visible_aspect_line": 0, "visible_aspect_grid": 0},
   {"id": 42, "name": "true lilith own", "color": "#444444", "visible": 0, "element_points": 0, "zodiac_relation": "-1", "label": "South Node", "label_short": "SNode", "visible_aspect_line": 0, "visible_aspect_grid": 0}
 ],
-"settings_svg": {"c1": 0, "c2": 20, "c3": 60, "offset_degree_planet_x": 4, "offset_degree_planet_y": -4}
+"settings_svg": {"c1": 0, "c2": 20, "c3": 60, "r": 240, "circleX": 0, "circleY": -10, "offset_degree_planet_x": 4, "offset_degree_planet_y": -4}
 }
