OpenAstro2 Minor aspects

--- a/openastro2/settings/settings2.json
+++ b/openastro2/settings/settings2.json
@@ -1,55 +1,37 @@
 {
-"astrocfg": {"version": "2.0.0", "home_location": "Ilanskiy, Krasnoyarskiy, Russia", "home_geolat": "56.01839", "home_geolon": "92.86717", "home_countrycode": "RU", "home_timezonestr": "Asia/Krasnoyarsk", "use_geonames.org": "0", "houses_system": "P", "postype": "geo", "chartview": "european", "zodiactype": "tropical", "siderealmode": "FAGAN_BRADLEY", "language": "en"},
+"astrocfg": {"version": "2.0.0", "home_location": "Krasnoyarsk, Krasnoyarskiy, Russia", "home_geolat": "56.01839", "home_geolon": "92.86717", "home_countrycode": "RU", "home_timezonestr": "Asia/Krasnoyarsk", "use_geonames.org": "0", "houses_system": "P", "postype": "geo", "chartview": "european", "zodiactype": "tropical", "siderealmode": "FAGAN_BRADLEY", "language": "en"},
 "color_codes": {
   "paper_0": "#000000", "paper_1": "#ffffff",
   "zodiac_bg_0": "#ef5350", "zodiac_bg_1": "#73b230", "zodiac_bg_2": "#ffd237", "zodiac_bg_3": "#4093f4", "zodiac_bg_4": "#ef5350", "zodiac_bg_5": "#73b230", "zodiac_bg_6": "#ffd237", "zodiac_bg_7": "#4093f4", "zodiac_bg_8": "#ef5350", "zodiac_bg_9": "#73b230", "zodiac_bg_10": "#ffd237", "zodiac_bg_11": "#4093f4", "zodiac_icon_0": "#333333", "zodiac_icon_1": "#333333", "zodiac_icon_2": "#333333", "zodiac_icon_3": "#333333", "zodiac_icon_4": "#333333", "zodiac_icon_5": "#333333", "zodiac_icon_6": "#333333", "zodiac_icon_7": "#333333", "zodiac_icon_8": "#333333", "zodiac_icon_9": "#333333", "zodiac_icon_10": "#333333", "zodiac_icon_11": "#333333",
   "zodiac_radix_ring_0": "#CCCCCC", "zodiac_radix_ring_1": "#CCCCCC", "zodiac_radix_ring_2": "#CCCCCC",
   "zodiac_transit_ring_0": "#CCCCCC", "zodiac_transit_ring_1": "#CCCCCC", "zodiac_transit_ring_2": "#CCCCCC",
   "houses_radix_line": "#444444", "houses_transit_line_1": "#ff0000", "houses_transit_line_2": "#0000ff",
-  "aspect_0": "#4093f4",
-  "aspect_18": "#888888",
-  "aspect_20": "#888888",
-  "aspect_30": "#770000",
-  "aspect_36": "#888888",
-  "aspect_40": "#888888",
-  "aspect_45": "#888888",
-  "aspect_51.5": "#888888",
-  "aspect_60": "#ef5350",
-  "aspect_72": "#770000",
-  "aspect_80": "#888888",
-  "aspect_90": "#444444",
-  "aspect_100": "#888888",
-  "aspect_108": "#888888",
-  "aspect_120": "#ef5350",
-  "aspect_135": "#888888",
-  "aspect_144": "#770000",
-  "aspect_150": "#fff600",
-  "aspect_180": "#444444",
+
   "planet_all": "#444444",
   "color_radix": "#444444", "color_transit_1": "#ff0000", "color_transit_2": "#0000FF",
   "planet_0": "#444444", "planet_1": "#444444", "planet_2": "#444444", "planet_3": "#444444", "planet_4": "#444444", "planet_5": "#444444", "planet_6": "#444444", "planet_7": "#444444", "planet_8": "#444444", "planet_9": "#444444", "planet_10": "#444444", "planet_11": "#444444", "planet_12": "#444444", "planet_13": "#444444", "planet_14": "#444444", "planet_15": "#444444", "planet_16": "#000000", "planet_17": "#000000", "planet_18": "#000000", "planet_19": "#000000", "planet_20": "#000000", "planet_21": "#000000", "planet_22": "#444444", "planet_23": "#444444", "planet_24": "#444444", "planet_25": "#444444", "planet_26": "#444444", "planet_27": "#444444", "planet_28": "#000000", "planet_29": "#000000", "planet_30": "#000000", "planet_31": "#000000", "planet_32": "#000000", "planet_33": "#000000", "planet_34": "#000000",
   "lunar_phase_0": "#000000", "lunar_phase_1": "#FFFFFF", "lunar_phase_2": "#CCCCCC"},
 "label": {"cusp": "Cusp", "longitude": "Lon", "latitude": "Lat", "north": "N", "east": "E", "south": "S", "west": "W", "apparent_geocentric": "Apparent Geocentric", "true_geocentric": "True Geocentric", "topocentric": "Topocentric", "heliocentric": "Heliocentric", "fire": "Fire", "earth": "Earth", "air": "Air", "water": "Water", "radix": "Radix", "transit": "Transit", "synastry": "Synastry", "composite": "Composite", "combine": "Combine", "solar": "Solar", "secondary_progressions": "Secondary Progressions"},
 "settings_aspect": [
-  {"degree": 0, "name": "conjunction 0", "color": "#5757e2", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "10"},
-  {"degree": 18, "name": "vigintil 1/20", "color": "#810757", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
-  {"degree": 20, "name": "semi-nanogon 1/18", "color": "#810757", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
-  {"degree": 30, "name": "semi-sextile 1/12", "color": "#810757", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "3"},
-  {"degree": 36, "name": "decil 1/10", "color": "#810757", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
-  {"degree": 40, "name": "nanogon 1/9", "color": "#b14e58", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
-  {"degree": 45, "name": "semi-square 1/8", "color": "#b14e58", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "3"},
-  {"degree": 51.5, "name": "septil 1/7", "color": "#b14e58", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
-  {"degree": 60, "name": "sextile 1/6", "color": "#d59e28", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "5"},
-  {"degree": 72, "name": "quintile 1/5", "color": "#1f99b3", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "2"},
-  {"degree": 80, "name": "binanogon 2/9", "color": "#1f99b3", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
-  {"degree": 90, "name": "square 1/4", "color": "#dc0000", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "5"},
-  {"degree": 100, "name": "sentagon 5/18", "color": "#b14e58", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
-  {"degree": 108, "name": "tridecil 3/10", "color": "#b14e58", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
-  {"degree": 120, "name": "trine 1/3", "color": "#36d100", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "6"},
-  {"degree": 135, "name": "sesquiquadrate 3/8", "color": "#985a10", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "3"},
-  {"degree": 144, "name": "biquintile 2/5", "color": "#7a9810", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "2"},
-  {"degree": 150, "name": "quincunx 5/12", "color": "#fff600", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 0, "orb": "3"},
-  {"degree": 180, "name": "opposition 1/2", "color": "#510060", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "6"}
+  {"degree": 0, "name": "conjunction 0", "color": "#4093f4", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "10"},
+  {"degree": 18, "name": "vigintil 1/20", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 20, "name": "semi-nanogon 1/18", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 30, "name": "semi-sextile 1/12", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 36, "name": "decil 1/10", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 40, "name": "nanogon 1/9", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 45, "name": "semi-square 1/8", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 51.5, "name": "septil 1/7", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 60, "name": "sextile 1/6", "color": "#ef5350", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "5"},
+  {"degree": 72, "name": "quintile 1/5", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 80, "name": "binanogon 2/9", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 90, "name": "square 1/4", "color": "#444444", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "5"},
+  {"degree": 100, "name": "sentagon 5/18", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 108, "name": "tridecil 3/10", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 120, "name": "trine 1/3", "color": "#ef5350", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "6"},
+  {"degree": 135, "name": "sesquiquadrate 3/8", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "3"},
+  {"degree": 144, "name": "biquintile 2/5", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
+  {"degree": 150, "name": "quincunx 5/12", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 0, "orb": "1"},
+  {"degree": 180, "name": "opposition 1/2", "color": "#444444", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "6"}
 ],
 "settings_planet": [
   {"id": 0, "name": "sun", "color": "#444444", "visible": 1, "element_points": 40, "zodiac_relation": "4", "label": "\u0421\u043e\u043b\u043d\u0446\u0435", "label_short": "sun", "visible_aspect_line": 1, "visible_aspect_grid": 1},
