--- a/openastro2/settings/settings2.json
+++ b/openastro2/settings/settings2.json
@@ -12,8 +12,15 @@
   "planet_0": "#444444", "planet_1": "#444444", "planet_2": "#444444", "planet_3": "#444444", "planet_4": "#444444", "planet_5": "#444444", "planet_6": "#444444", "planet_7": "#444444", "planet_8": "#444444", "planet_9": "#444444", "planet_10": "#444444", "planet_11": "#444444", "planet_12": "#444444", "planet_13": "#444444", "planet_14": "#444444", "planet_15": "#444444", "planet_16": "#000000", "planet_17": "#000000", "planet_18": "#000000", "planet_19": "#000000", "planet_20": "#000000", "planet_21": "#000000", "planet_22": "#444444", "planet_23": "#444444", "planet_24": "#444444", "planet_25": "#444444", "planet_26": "#444444", "planet_27": "#444444", "planet_28": "#000000", "planet_29": "#000000", "planet_30": "#000000", "planet_31": "#000000", "planet_32": "#000000", "planet_33": "#000000", "planet_34": "#000000",
   "lunar_phase_0": "#000000", "lunar_phase_1": "#FFFFFF", "lunar_phase_2": "#CCCCCC"},
 "label": {"cusp": "Cusp", "longitude": "Lon", "latitude": "Lat", "north": "N", "east": "E", "south": "S", "west": "W", "apparent_geocentric": "Apparent Geocentric", "true_geocentric": "True Geocentric", "topocentric": "Topocentric", "heliocentric": "Heliocentric", "fire": "Fire", "earth": "Earth", "air": "Air", "water": "Water", "radix": "Radix", "transit": "Transit", "synastry": "Synastry", "composite": "Composite", "combine": "Combine", "solar": "Solar", "secondary_progressions": "Secondary Progressions"},
+
 "settings_aspect": [
-  {"degree": 0, "name": "conjunction 0", "color": "#4093f4", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "10"},
+  {"degree": 0, "name": "conjunction 0", "color": "#4093f4", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "10",
+  "orbs": {
+    "Radix":     {"default": 1, "0": 2, "1": 1.5, "2": 1, "3": 1, "4": 1, "5": 1, "6": 1, "7": 1, "8": 1, "9": 1, "23": 1, "24": 1, "27": 1, "28": 1, "29": 1, "30": 1, "31": 1,  "32": 1 },
+    "Transit":   {"default": 1, "0": 2, "1": 1.5, "2": 1, "3": 1, "4": 1, "5": 1, "6": 1, "7": 1, "8": 1, "9": 1, "23": 1, "24": 1, "27": 1, "28": 1, "29": 1, "30": 1, "31": 1,  "32": 1 },
+    "Direction": {"default": 1, "0": 2, "1": 1.5, "2": 1, "3": 1, "4": 1, "5": 1, "6": 1, "7": 1, "8": 1, "9": 1, "23": 1, "24": 1, "27": 1, "28": 1, "29": 1, "30": 1, "31": 1,  "32": 1 }
+  }
+  },
   {"degree": 18, "name": "vigintil 1/20", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
   {"degree": 20, "name": "semi-nanogon 1/18", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
   {"degree": 30, "name": "semi-sextile 1/12", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
@@ -31,10 +38,22 @@
   {"degree": 135, "name": "sesquiquadrate 3/8", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "3"},
   {"degree": 144, "name": "biquintile 2/5", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 1, "orb": "1"},
   {"degree": 150, "name": "quincunx 5/12", "color": "#bbbbbb", "visible": 1, "visible_grid": 0, "is_major": 0, "is_minor": 0, "orb": "1"},
-  {"degree": 180, "name": "opposition 1/2", "color": "#444444", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "6"}
+  {"degree": 180, "name": "opposition 1/2", "color": "#444444", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": "6",
+  "orbs": {
+    "Radix": {"0": 2, "1": 1.5, "2": 1, "3": 1, "4": 1, "5": 1, "6": 1, "7": 1, "8": 1, "9": 1, "23": 1, "24": 1, "27": 1, "28": 1, "29": 1, "30": 1, "31": 1,  "32": 1 },
+    "Direction": {"0": 2, "1": 1.5, "2": 1, "3": 1, "4": 1, "5": 1, "6": 1, "7": 1, "8": 1, "9": 1, "23": 1, "24": 1, "27": 1, "28": 1, "29": 1, "30": 1, "31": 1,  "32": 1 },
+    "Transit": {"0": 2, "1": 1.5, "2": 1, "3": 1, "4": 1, "5": 1, "6": 1, "7": 1, "8": 1, "9": 1, "23": 1, "24": 1, "27": 1, "28": 1, "29": 1, "30": 1, "31": 1,  "32": 1 }
+  }
+  }
 ],
 "settings_planet": [
-  {"id": 0, "name": "sun", "color": "#444444", "visible": 1, "element_points": 40, "zodiac_relation": "4", "label": "\u0421\u043e\u043b\u043d\u0446\u0435", "label_short": "sun", "visible_aspect_line": 1, "visible_aspect_grid": 1},
+  {"id": 0, "name": "sun", "color": "#444444", "visible": 1, "element_points": 40, "zodiac_relation": "4", "label": "\u0421\u043e\u043b\u043d\u0446\u0435", "label_short": "sun", "visible_aspect_line": 1, "visible_aspect_grid": 1,
+"planet_orbs": {
+    "Radix": {"default": 1, "180": 1},
+    "Direction": {"0": 2, "1": 1.5, "2": 1, "3": 1, "4": 1, "5": 1, "6": 1, "7": 1, "8": 1, "9": 1, "23": 1, "24": 1, "27": 1, "28": 1, "29": 1, "30": 1, "31": 1,  "32": 1 },
+    "Transit": {"0": 2, "1": 1.5, "2": 1, "3": 1, "4": 1, "5": 1, "6": 1, "7": 1, "8": 1, "9": 1, "23": 1, "24": 1, "27": 1, "28": 1, "29": 1, "30": 1, "31": 1,  "32": 1 }
+  }
+  },
   {"id": 1, "name": "moon", "color": "#444444", "visible": 1, "element_points": 40, "zodiac_relation": "3", "label": "\u041b\u0443\u043d\u0430", "label_short": "moon", "visible_aspect_line": 1, "visible_aspect_grid": 1},
   {"id": 2, "name": "mercury", "color": "#444444", "visible": 1, "element_points": 15, "zodiac_relation": "2,5", "label": "\u041c\u0435\u0440\u043a\u0443\u0440\u0438\u0439", "label_short": "mercury", "visible_aspect_line": 1, "visible_aspect_grid": 1},
   {"id": 3, "name": "venus", "color": "#444444", "visible": 1, "element_points": 15, "zodiac_relation": "1,6", "label": "\u0412\u0435\u043d\u0435\u0440\u0430", "label_short": "venus", "visible_aspect_line": 1, "visible_aspect_grid": 1},
