--- a/openastro2/settings/settings2.json
+++ b/openastro2/settings/settings2.json
@@ -173,14 +173,14 @@
       "Direction": {"default":  1, "0":  1, "18": 1, "20": 1, "30": 1, "36": 1, "40": 1, "45":   1, "51.5": 1, "60": 1, "72": 1, "80": 1, "90":  1, "100": 1, "108": 1, "120":  1, "135": 1, "144": 1, "150": 1, "180":  1}
     }
   },
-  {"id": 27, "name": "V", "color": "#FF0000", "visible": 0, "element_points": 0, "zodiac_relation": "-1", "label": "V", "label_short": "V", "visible_aspect_line": 0, "visible_aspect_grid": 1,
+  {"id": 27, "name": "V", "color": "#FF0000", "visible": 1, "element_points": 0, "zodiac_relation": "-1", "label": "V", "label_short": "V", "visible_aspect_line": 0, "visible_aspect_grid": 1,
     "planet_orb": {
       "Radix": {"default": 5, "0": 5, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 1, "51.5": 0, "60": 5, "72": 0, "80": 0, "90": 5, "100": 0, "108": 0, "120": 5, "135": 1, "144": 0, "150": 1, "180": 5},
       "Transit": {"visible2": 0, "default": 2, "0": 2, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 0, "51.5": 0, "60": 2, "72": 0, "80": 0, "90": 2, "100": 0, "108": 0, "120": 2, "135": 0, "144": 0, "150": 0, "180": 2},
       "Direction": {"default":  1, "0":  1, "18": 1, "20": 1, "30": 1, "36": 1, "40": 1, "45":   1, "51.5": 1, "60": 1, "72": 1, "80": 1, "90":  1, "100": 1, "108": 1, "120":  1, "135": 1, "144": 1, "150": 1, "180":  1}
     }
   },
-  {"id": 28, "name": "VI", "color": "#FF0000", "visible": 0, "element_points": 0, "zodiac_relation": "-1", "label": "VI", "label_short": "VI", "visible_aspect_line": 0, "visible_aspect_grid": 1,
+  {"id": 28, "name": "VI", "color": "#FF0000", "visible": 1, "element_points": 0, "zodiac_relation": "-1", "label": "VI", "label_short": "VI", "visible_aspect_line": 0, "visible_aspect_grid": 1,
     "planet_orb": {
       "Radix": {"default": 5, "0": 5, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 1, "51.5": 0, "60": 5, "72": 0, "80": 0, "90": 5, "100": 0, "108": 0, "120": 5, "135": 1, "144": 0, "150": 1, "180": 5},
       "Transit": {"visible2": 0, "default": 2, "0": 2, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 0, "51.5": 0, "60": 2, "72": 0, "80": 0, "90": 2, "100": 0, "108": 0, "120": 2, "135": 0, "144": 0, "150": 0, "180": 2},
@@ -194,8 +194,20 @@
       "Direction": {"default":  1, "0":  1, "18": 1, "20": 1, "30": 1, "36": 1, "40": 1, "45":   1, "51.5": 1, "60": 1, "72": 1, "80": 1, "90":  1, "100": 1, "108": 1, "120":  1, "135": 1, "144": 1, "150": 1, "180":  1}
     }
   },
-  {"id": 30, "name": "VIII", "color": "#FF0000", "visible": 0, "element_points": 0, "zodiac_relation": "-1", "label": "VIII", "label_short": "VIII", "visible_aspect_line": 0, "visible_aspect_grid": 0},
-  {"id": 31, "name": "IX", "color": "#FF0000", "visible": 0, "element_points": 0, "zodiac_relation": "-1", "label": "IX", "label_short": "IX", "visible_aspect_line": 0, "visible_aspect_grid": 0},
+  {"id": 30, "name": "VIII", "color": "#FF0000", "visible": 1, "element_points": 0, "zodiac_relation": "-1", "label": "VIII", "label_short": "VIII", "visible_aspect_line": 0, "visible_aspect_grid": 0,
+    "planet_orb": {
+      "Radix": {"default": 5, "0": 5, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 1, "51.5": 0, "60": 5, "72": 0, "80": 0, "90": 5, "100": 0, "108": 0, "120": 5, "135": 1, "144": 0, "150": 1, "180": 5},
+      "Transit": {"visible2": 0, "default": 2, "0": 2, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 0, "51.5": 0, "60": 2, "72": 0, "80": 0, "90": 2, "100": 0, "108": 0, "120": 2, "135": 0, "144": 0, "150": 0, "180": 2},
+      "Direction": {"default":  1, "0":  1, "18": 1, "20": 1, "30": 1, "36": 1, "40": 1, "45":   1, "51.5": 1, "60": 1, "72": 1, "80": 1, "90":  1, "100": 1, "108": 1, "120":  1, "135": 1, "144": 1, "150": 1, "180":  1}
+    }
+  },
+  {"id": 31, "name": "IX", "color": "#FF0000", "visible": 1, "element_points": 0, "zodiac_relation": "-1", "label": "IX", "label_short": "IX", "visible_aspect_line": 0, "visible_aspect_grid": 0,
+    "planet_orb": {
+      "Radix": {"default": 5, "0": 5, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 1, "51.5": 0, "60": 5, "72": 0, "80": 0, "90": 5, "100": 0, "108": 0, "120": 5, "135": 1, "144": 0, "150": 1, "180": 5},
+      "Transit": {"visible2": 0, "default": 2, "0": 2, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 0, "51.5": 0, "60": 2, "72": 0, "80": 0, "90": 2, "100": 0, "108": 0, "120": 2, "135": 0, "144": 0, "150": 0, "180": 2},
+      "Direction": {"default":  1, "0":  1, "18": 1, "20": 1, "30": 1, "36": 1, "40": 1, "45":   1, "51.5": 1, "60": 1, "72": 1, "80": 1, "90":  1, "100": 1, "108": 1, "120":  1, "135": 1, "144": 1, "150": 1, "180":  1}
+    }
+  },
   {"id": 32, "name": "Mc", "color": "#FF0000", "visible": 1, "element_points": 20, "zodiac_relation": "-1", "label": "Mc", "label_short": "Mc", "visible_aspect_line": 0, "visible_aspect_grid": 1,
     "planet_orb": {
       "Radix": {"default": 5, "0": 5, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 1, "51.5": 0, "60": 5, "72": 0, "80": 0, "90": 5, "100": 0, "108": 0, "120": 5, "135": 1, "144": 0, "150": 1, "180": 5},
@@ -203,8 +215,20 @@
       "Direction": {"default":  1, "0":  1, "18": 1, "20": 1, "30": 1, "36": 1, "40": 1, "45":   1, "51.5": 1, "60": 1, "72": 1, "80": 1, "90":  1, "100": 1, "108": 1, "120":  1, "135": 1, "144": 1, "150": 1, "180":  1}
     }
   },
-  {"id": 33, "name": "XI", "color": "#FF0000", "visible": 0, "element_points": 0, "zodiac_relation": "-1", "label": "XI", "label_short": "XI", "visible_aspect_line": 0, "visible_aspect_grid": 0},
-  {"id": 34, "name": "XII", "color": "#FF0000", "visible": 0, "element_points": 0, "zodiac_relation": "-1", "label": "XII", "label_short": "XII", "visible_aspect_line": 0, "visible_aspect_grid": 0},
+  {"id": 33, "name": "XI", "color": "#FF0000", "visible": 1, "element_points": 0, "zodiac_relation": "-1", "label": "XI", "label_short": "XI", "visible_aspect_line": 0, "visible_aspect_grid": 0,
+    "planet_orb": {
+      "Radix": {"default": 5, "0": 5, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 1, "51.5": 0, "60": 5, "72": 0, "80": 0, "90": 5, "100": 0, "108": 0, "120": 5, "135": 1, "144": 0, "150": 1, "180": 5},
+      "Transit": {"visible2": 0, "default": 2, "0": 2, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 0, "51.5": 0, "60": 2, "72": 0, "80": 0, "90": 2, "100": 0, "108": 0, "120": 2, "135": 0, "144": 0, "150": 0, "180": 2},
+      "Direction": {"default":  1, "0":  1, "18": 1, "20": 1, "30": 1, "36": 1, "40": 1, "45":   1, "51.5": 1, "60": 1, "72": 1, "80": 1, "90":  1, "100": 1, "108": 1, "120":  1, "135": 1, "144": 1, "150": 1, "180":  1}
+    }
+  },
+  {"id": 34, "name": "XII", "color": "#FF0000", "visible": 1, "element_points": 0, "zodiac_relation": "-1", "label": "XII", "label_short": "XII", "visible_aspect_line": 0, "visible_aspect_grid": 0,
+    "planet_orb": {
+      "Radix": {"default": 5, "0": 5, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 1, "51.5": 0, "60": 5, "72": 0, "80": 0, "90": 5, "100": 0, "108": 0, "120": 5, "135": 1, "144": 0, "150": 1, "180": 5},
+      "Transit": {"visible2": 0, "default": 2, "0": 2, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 0, "51.5": 0, "60": 2, "72": 0, "80": 0, "90": 2, "100": 0, "108": 0, "120": 2, "135": 0, "144": 0, "150": 0, "180": 2},
+      "Direction": {"default":  1, "0":  1, "18": 1, "20": 1, "30": 1, "36": 1, "40": 1, "45":   1, "51.5": 1, "60": 1, "72": 1, "80": 1, "90":  1, "100": 1, "108": 1, "120":  1, "135": 1, "144": 1, "150": 1, "180":  1}
+    }
+  },
   {"id": 35, "name": "day pars", "color": "#444444", "visible": 0, "element_points": 0, "zodiac_relation": "-1", "label": "Day Pars", "label_short": "DP", "visible_aspect_line": 0, "visible_aspect_grid": 0},
   {"id": 36, "name": "night pars", "color": "#444444", "visible": 0, "element_points": 0, "zodiac_relation": "-1", "label": "Night Pars", "label_short": "NP", "visible_aspect_line": 0, "visible_aspect_grid": 0},
   {"id": 37, "name": "south node", "color": "#444444", "visible": 0, "element_points": 0, "zodiac_relation": "-1", "label": "South Node", "label_short": "SNode", "visible_aspect_line": 0, "visible_aspect_grid": 0},
