OpenAstro2 "postype": "geo" - Moon as another astroprocessors

--- a/openastro2/settings/settings2.json
+++ b/openastro2/settings/settings2.json
@@ -1,5 +1,5 @@
 {
-"astrocfg": {"version": "2.0.0", "home_location": "Krasnoyarsk, Krasnoyarskiy, Russia", "home_geolat": "56.01839", "home_geolon": "92.86717", "home_countrycode": "RU", "home_timezonestr": "Asia/Krasnoyarsk", "use_geonames.org": "0", "houses_system": "P", "postype": "topo", "chartview": "european", "zodiactype": "tropical", "siderealmode": "FAGAN_BRADLEY", "language": "en",
+"astrocfg": {"version": "2.0.0", "home_location": "London", "home_geolat": "56.01839", "home_geolon": "92.86717", "home_countrycode": "EN", "home_timezonestr": "Asia/Krasnoyarsk", "use_geonames.org": "0", "houses_system": "P", "postype": "geo", "chartview": "european", "zodiactype": "tropical", "siderealmode": "FAGAN_BRADLEY", "language": "en",
   "round_aspects": 1
 },
 "color_codes": {
