OpenAstro2 ASC all planet 3

--- a/openastro2/settings/settings2.json
+++ b/openastro2/settings/settings2.json
@@ -101,7 +101,7 @@
       "Direction": {"default":  1, "0":  1, "18": 1, "20": 1, "30": 1, "36": 1, "40": 1, "45":   1, "51.5": 1, "60": 1, "72": 1, "80": 1, "90":  1, "100": 1, "108": 1, "120":  1, "135": 1, "144": 1, "150": 1, "180":  1}
     }
   },
-  {"id": 9, "name": "pluto", "color": "#444444", "visible": 1, "element_points": 10, "zodiac_relation": "7", "label": "\u041f\u043b\u0443\u0442\u043e\u043d", "label_short": "pluto", "visible_aspect_line": 1, "visible_aspect_grid": 1,
+  {"id": 9, "name": "pluton", "color": "#444444", "visible": 1, "element_points": 10, "zodiac_relation": "7", "label": "\u041f\u043b\u0443\u0442\u043e\u043d", "label_short": "pluto", "visible_aspect_line": 1, "visible_aspect_grid": 1,
     "planet_orb": {
       "Radix": {"default": 5, "0": 5, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 1, "51.5": 0, "60": 5, "72": 0, "80": 0, "90": 5, "100": 0, "108": 0, "120": 5, "135": 1, "144": 0, "150": 1, "180": 5},
       "Transit": {"default": 2, "0": 2, "18": 0, "20": 0, "30": 0, "36": 0, "40": 0, "45": 0, "51.5": 0, "60": 2, "72": 0, "80": 0, "90": 2, "100": 0, "108": 0, "120": 2, "135": 0, "144": 0, "150": 0, "180": 2},
