--- a/openastro2/settings/settings2.json
+++ b/openastro2/settings/settings2.json
@@ -17,26 +17,48 @@
 "label": {"cusp": "Cusp", "longitude": "Lon", "latitude": "Lat", "north": "N", "east": "E", "south": "S", "west": "W", "apparent_geocentric": "Apparent Geocentric", "true_geocentric": "True Geocentric", "topocentric": "Topocentric", "heliocentric": "Heliocentric", "fire": "Fire", "earth": "Earth", "air": "Air", "water": "Water", "radix": "Radix", "transit": "Transit", "synastry": "Synastry", "composite": "Composite", "combine": "Combine", "solar": "Solar", "secondary_progressions": "Secondary Progressions"},
 
 "settings_aspect": [
-  {"degree": 0, "name": "conjunction 0", "color": "#4093f4", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 10},
-  {"degree": 18, "name": "vigintil 1/20", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
-  {"degree": 20, "name": "semi-nanogon 1/18", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
-  {"degree": 30, "name": "semi-sextile 1/12", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
-  {"degree": 36, "name": "decil 1/10", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
-  {"degree": 40, "name": "nanogon 1/9", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
-  {"degree": 45, "name": "semi-square 1/8", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
-  {"degree": 51.5, "name": "septil 1/7", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
-  {"degree": 60, "name": "sextile 1/6", "color": "#ef5350", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 5},
-  {"degree": 72, "name": "quintile 1/5", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
-  {"degree": 80, "name": "binanogon 2/9", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
-  {"degree": 90, "name": "square 1/4", "color": "#444444", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 5},
-  {"degree": 100, "name": "sentagon 5/18", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
-  {"degree": 108, "name": "tridecil 3/10", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
-  {"degree": 120, "name": "trine 1/3", "color": "#ef5350", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 6},
-  {"degree": 135, "name": "sesquiquadrate 3/8", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 3},
-  {"degree": 144, "name": "biquintile 2/5", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
-  {"degree": 150, "name": "quincunx 5/12", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 0, "orb": 1},
-  {"degree": 180, "name": "opposition 1/2", "color": "#444444", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 6}
+  {"id": "0", "degree": 0, "name": "conjunction 0", "color": "#4093f4", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 10},
+  {"id": "18", "degree": 18, "name": "vigintil 1/20", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  {"id": "20", "degree": 20, "name": "semi-nanogon 1/18", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  {"id": "30", "degree": 30, "name": "semi-sextile 1/12", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  {"id": "36", "degree": 36, "name": "decil 1/10", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  {"id": "40", "degree": 40, "name": "nanogon 1/9", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  {"id": "45", "degree": 45, "name": "semi-square 1/8", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  {"id": "51.5", "degree": 51.5, "name": "septil 1/7", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  {"id": "60", "degree": 60, "name": "sextile 1/6", "color": "#ef5350", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 5},
+  {"id": "72", "degree": 72, "name": "quintile 1/5", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  {"id": "80", "degree": 80, "name": "binanogon 2/9", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  {"id": "90", "degree": 90, "name": "square 1/4", "color": "#444444", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 5},
+  {"id": "100", "degree": 100, "name": "sentagon 5/18", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  {"id": "108", "degree": 108, "name": "tridecil 3/10", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  {"id": "120", "degree": 120, "name": "trine 1/3", "color": "#ef5350", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 6},
+  {"id": "135", "degree": 135, "name": "sesquiquadrate 3/8", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 3},
+  {"id": "144", "degree": 144, "name": "biquintile 2/5", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  {"id": "150", "degree": 150, "name": "quincunx 5/12", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 0, "orb": 1},
+  {"id": "180", "degree": 180, "name": "opposition 1/2", "color": "#444444", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 6}
 ],
+
+"settings_aspect_dic": {
+  "0" : {"id": "0", "degree": 0, "name": "conjunction 0", "color": "#4093f4", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 10},
+  "18" : {"id": "18", "degree": 18, "name": "vigintil 1/20", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  "20" : {"id": "20", "degree": 20, "name": "semi-nanogon 1/18", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  "30" : {"id": "30", "degree": 30, "name": "semi-sextile 1/12", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  "36" : {"id": "36", "degree": 36, "name": "decil 1/10", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  "40" : {"id": "40", "degree": 40, "name": "nanogon 1/9", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  "45" : {"id": "45", "degree": 45, "name": "semi-square 1/8", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  "51.5" : {"id": "51.5", "degree": 51.5, "name": "septil 1/7", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  "60" : {"id": "60", "degree": 60, "name": "sextile 1/6", "color": "#ef5350", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 5},
+  "72" : {"id": "72", "degree": 72, "name": "quintile 1/5", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  "80" : {"id": "80", "degree": 80, "name": "binanogon 2/9", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  "90" : {"id": "90", "degree": 90, "name": "square 1/4", "color": "#444444", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 5},
+  "100" : {"id": "100", "degree": 100, "name": "sentagon 5/18", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  "108" : {"id": "108", "degree": 108, "name": "tridecil 3/10", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  "120" : {"id": "120", "degree": 120, "name": "trine 1/3", "color": "#ef5350", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 6},
+  "135" : {"id": "135", "degree": 135, "name": "sesquiquadrate 3/8", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 3},
+  "144" : {"id": "144", "degree": 144, "name": "biquintile 2/5", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 1, "orb": 1},
+  "150" : {"id": "150", "degree": 150, "name": "quincunx 5/12", "color": "#bbbbbb", "visible": 1, "visible_grid": 1, "is_major": 0, "is_minor": 0, "orb": 1},
+  "180" : {"id": "180", "degree": 180, "name": "opposition 1/2", "color": "#444444", "visible": 1, "visible_grid": 1, "is_major": 1, "is_minor": 0, "orb": 6}
+  },
 "settings_planet": [
   {"id": 0, "name": "sun", "color": "#444444", "visible": 1, "element_points": 40, "zodiac_relation": "4", "label": "\u0421\u043e\u043b\u043d\u0446\u0435", "label_short": "sun", "visible_aspect_line": 1, "visible_aspect_grid": 1,
     "planet_orb": {
